# ch32v003_rust_usb

./: Cargo.toml  Makefile  README.md  build.rs  device_usb.x  link_usb.x  memory.x  usb_config.h
rv003usb/: rv003usb.S  rv003usb.c  rv003usb.h
src/: descriptors.rs  main.rs  usb.rs
